--- a/index.html
+++ b/index.html
@@ -7,13 +7,7 @@
   </head>
 
   <body>
-<<<<<<< HEAD
-Karina updated
-Aigera
-=======
-    Aigera
-    Karina
->>>>>>> d81d0317c087af185b0421a3977d3e3318bee6b9
+Karina Aigera
   </body>
 
   </html>
