--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
