--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 
   <head>
     <meta charset="utf-8">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title></title>
   </head>
 
   <body>
