updated and changed my html code

--- a/index.html
+++ b/index.html
@@ -8,12 +8,7 @@
   </head>
 
   <body>
-<<<<<<< Updated upstream
-Karina Aigera
-=======
-    Aigera
-    Karin
->>>>>>> Stashed changes
+Karina 
   </body>
 
   </html>
